add payment gateway and e-ticket email
